primers links plana

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<html><body>Hola</body></html>
+<html>
+<body>
+First steps:
+
+https://pages.github.com/
+https://profesinformatica.github.io/FpInfor/
+
+</body></html>
